# SpeechAgentKreyn

./: README.md
speechagent/: .gitignore  main.py  pyproject.toml  requirements.txt
